FIX #000 * games access in demo * imgs access in demo * font re-ubic * index page icon

--- a/game/Pac-Cat/index.html
+++ b/game/Pac-Cat/index.html
@@ -12,7 +12,7 @@
 		}
 		@font-face{
 			font-family: Arcade;
-			src: url('./font/ka1.ttf');
+			src: url('../../public/font/ka1.ttf');
 		}
 		body{
 			width: 100%;
