--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="./public/icon/Heart.webp" type="image/x-icon">
     <title>Mini Games .JS</title>
     <link rel="stylesheet" href="./src/vars.css">
     <link rel="stylesheet" href="./src/styles.css">
