FEAT #002 * home page styles * star wars font * minecraft font

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <main>
-        <h1>Mini Games .JS</h1>
+        <div id="heading">
+            <img src="./public/icon/Heart.gif" alt="">
+            <h1>Mini Games .JS</h1>
+            <p>Developing just with HTML, CSS and Java Script Vanilla </p>
+        </div>
         <section id="game-list"></section>
         <script type="module" src="./src/main.js"></script>
     </main>
