REFACTOR #000 + index.html>script => script.js + index.html>styles => styles.css + Pac-cat & SnowCat refactor + Pac-cat finished + SnowCat details

--- a/game/Pac-Cat/index.html
+++ b/game/Pac-Cat/index.html
@@ -5,255 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="./img/papitas.png" type="image/x-icon">
 	<title>Pac - Cat</title>
-	<style type="text/css">
-		*{
-			margin: 0;
-			padding: 0;
-		}
-		@font-face{
-			font-family: Arcade;
-			src: url('../../public/font/ka1.ttf');
-		}
-		body{
-			width: 100%;
-			height: 100vh;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			gap: .75rem;
-			background-color: rgb(10, 10, 10);
-			font-family: Arcade;
-			letter-spacing: 5px;
-			color: #f0f0f0;
-		}
-		h1{
-			font-size: 60px;
-		}
-		#mundo{
-			position: relative;
-		}
-		.fila{
-			line-height: 0;
-		}
-		#gato {
-			background-image: url('img/gato.gif');
-			background-size: contain;
-			position: absolute;
-			left: 40px;
-			top: 40px;
-		}
-		#gato, #perro, .pared, .blank, .burguer, .papitas {
-			height: 40px;
-			width: 40px;
-			display: inline-block;
-		}
-		#perro {
-			background-image: url('img/perro.gif');
-			background-size: contain;
-			position: absolute;
-			left: 40px;
-			top: 40px;
-		}
-		.pared {
-			background-color: purple;
-		}
-		.burguer {
-			background-image: url('img/burguer.png');
-		}
-		.papitas {
-			background-image: url('img/papitas.png');
-		}
-		.burguer, .papitas {
-			background-size: 30px;
-			background-repeat: no-repeat;
-			background-position: center;
-		}
-		.score{
-			padding: 0 .75rem;
-			display: flex;
-			flex-direction: column;
-			gap: .5rem;
-		}
-		#vida{
-			display: flex;
-			align-items: center;
-			gap: .75rem;
-		}
-		#vida img{
-			width: 2rem;
-			height: 2rem;
-			filter: invert(1);
-			transition: filter .5s ease-in-out;
-		}
-		#vida img.less{
-			filter: invert(0);
-			filter: drop-shadow(0px 2px #fff);
-		}
-		#retry{
-			background: transparent;
-			font-family: inherit;
-			color: inherit;
-			font-size: 1.25rem;
-			padding: .5rem 1rem;
-			border: 3px solid transparent;
-			cursor: pointer;
-		}
-		#retry:hover{
-			border-color: #fff;
-		}
-	</style>
+	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div id='mundo'></div>
+	<div id='world'></div>
 	<div class="score">
 		<div id="vida">
 			<span>Vida:</span>
-			<img src="./img/heart.png" alt="H" class="heart-3">
-			<img src="./img/heart.png" alt="H" class="heart-2">
-			<img src="./img/heart.png" alt="H" class="heart-1">
+			<img src="./img/heart.png" alt="" class="heart-3">
+			<img src="./img/heart.png" alt="" class="heart-2">
+			<img src="./img/heart.png" alt="" class="heart-1">
 		</div>
-		<div id="puntaje">
-			Puntaje: <span id="puntaje-value">0</span>
-		</div>
+		<div id="score-value">Score: 0</div>
 	</div>
 </body>
-<script type="text/javascript">
-	function random(max,min){
-		return Math.floor(Math.random()* (max-min +1))+min;
-	}
-	var mundo = [
-		[1,1,1,1,1,1,1,1,1,1],
-		[1,0,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),0,1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),random(-1,4),1],
-		[1,1,1,1,1,1,1,1,1,1],
-	];
-	var mundoDict = {
-		0: 'blank',
-		1: 'pared',
-		2: 'burguer',
-		3: 'papitas',
-	}
-	var gato = {
-		x: 1,
-		y: 1
-	}
-	var perro = {
-		x: 2,
-		y: 3,
-	}
-	var vidas = 3;
-	var puntaje = 0;
-	var maxPuntaje = mundo.reduce((accFila, fila) => {
-		let sumaFila = fila.reduce((accValor, valor) => {
-			if (valor === 2) return accValor + 10;
-			if (valor === 3) return accValor + 5;
-			return accValor;
-		}, 0);
-		return accFila + sumaFila;
-	}, 0);
-
-	function dibujarMundo(){
-		var output = `<div id='gato' style="top:${gato.y*40}px; left:${gato.x*40}px;"></div><div id='perro' style="top:${perro.y*40}px; left:${perro.x*40}px;"></div>`;
-		for(var fila = 0; fila <mundo.length; fila++){
-			output += "<div class = 'fila'>"
-			for(var x=0; x< mundo[fila].length; x++){
-				output += "<div class = '"+mundoDict[mundo[fila][x]] +"'></div>"
-			}
-			output += "</div>"
-		}
-		document.getElementById('mundo').innerHTML = output;
-	}
-	dibujarMundo();
-	function dibujarGato(){
-		document.getElementById('gato').style.top = (gato.y*40) +'px';
-		document.getElementById('gato').style.left = (gato.x*40) +'px';
-	}
-	function dibujaPerro(){
-		document.getElementById('perro').style.top = (perro.y*40) +'px';
-		document.getElementById('perro').style.left = (perro.x*40) +'px';
-	}
-	function muevePerro(){
-		var mueve = random(-1,4);
-		if(mueve ===0 && (mundo[perro.y][perro.x-1] !==1)){//0 = left
-			perro.x--;
-		} else if(mueve ===1 && (mundo[perro.y][perro.x+1] !==1)){//1 = right
-			perro.x++;
-		} else if(mueve ===2 && (mundo[perro.y-1][perro.x] !==1)){//2 = up
-			perro.y--;
-		} else if(mueve ===3 && (mundo[perro.y+1][perro.x] !==1)){//3 = down
-			perro.y++;
-		}
-	}
-	let reload = () => {
-		location.reload();
-	}
-	let puntajeMostrar = () => {
-		document.querySelector('#puntaje-value').textContent = `${puntaje} - ${maxPuntaje}`;
-	}
-
-	document.onkeydown = function(e){
-		if(e.keyCode === 37){ //izquierda
-			if(mundo[gato.y][gato.x-1] !==1){
-				gato.x--;
-			}
-		}
-		if(e.keyCode === 38){ //arriba
-			if(mundo[gato.y-1][gato.x] !==1){
-				gato.y--;
-			}
-		}
-		if(e.keyCode === 39){ //derecha
-			if(mundo[gato.y][gato.x+1] !==1){
-				gato.x++;
-			}
-		}
-		if(e.keyCode === 40){ //abajo
-			if(mundo[gato.y+1][gato.x] !==1){
-				gato.y++;
-			}
-		}
-
-		if(mundo[gato.y][gato.x] === 2){
-			mundo[gato.y][gato.x] =0;
-			puntaje+=10;
-			puntajeMostrar(puntaje);
-		} else if(mundo[gato.y][gato.x] === 3){
-			mundo[gato.y][gato.x] =0;
-			puntaje+=5;
-			puntajeMostrar(puntaje);
-		}
-		
-		if((gato.x === perro.x) && (gato.y === perro.y)){
-			document.querySelector(`#vida img.heart-${vidas}`).classList.add('less');
-			vidas -=1;
-		}
-		dibujarGato()
-		dibujarMundo()
-		if(vidas === 0){ // Game Over
-			document.querySelector('body').innerHTML = /*html*/ 
-				`<h1>Game Over!</h1><h2>Tu puntaje ${puntaje}</h2>
-				<button id="retry" onCLick={reload()}>Try Again</button>`;
-		}
-		if(puntaje === maxPuntaje){ // You Win
-			document.querySelector('body').innerHTML = /*html*/ 
-				`<h1>You Win!</h1><h2>Tu puntaje ${puntaje}</h2>
-				<button id="retry" onCLick={reload()}>Play Again</button>`;
-		}
-	}
-	function bucle() {
-		dibujarGato();
-		dibujaPerro();
-		muevePerro();
-		dibujaPerro();
-		setTimeout(bucle, 750);
-	}
-	bucle();
-</script>
+<script src="./script.js"></script>
 </html>
