FEAT #004 + space_invaders details + space_invaders show "gameOver" + space_invaders .js refactor

--- a/game/Space_Invaders/index.html
+++ b/game/Space_Invaders/index.html
@@ -14,7 +14,7 @@
 			<div class="alien destroyer" style="top:50px; left:50px;"></div>
 		</div>
 		<div id="shoots"></div>
-		<div id="score">×0</div>
+		<div id="score">x0</div>
 		<div id="life">
 			<div class="heart"></div>
 			<div class="heart"></div>
